--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,5 +34,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/master'
         with:
+          cname: blog.jahir.me
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
