--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "gatsby": "^3.9.0",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-feed": "^3.9.0",
