--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,129 @@
-name: Deploy to GitHub pages
+name: Deploy Gatsby site to Pages
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
+    branches: [$default-branch]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+# Default to bash
+defaults:
+  run:
+    shell: bash
 
 jobs:
-  deploy:
-    runs-on: ubuntu-18.04
+  # Build job
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
+      - name: Checkout
+        uses: actions/checkout@v4
+      # - name: Detect package manager
+      #   id: detect-package-manager
+      #   run: |
+      #     if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+      #       echo "manager=yarn" >> $GITHUB_OUTPUT
+      #       echo "command=install" >> $GITHUB_OUTPUT
+      #       exit 0
+      #     elif [ -f "${{ github.workspace }}/package.json" ]; then
+      #       echo "manager=npm" >> $GITHUB_OUTPUT
+      #       echo "command=ci" >> $GITHUB_OUTPUT
+      #       exit 0
+      #     else
+      #       echo "Unable to determine package manager"
+      #       exit 1
+      #     fi
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: "14"
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
+          node-version: "20"
+          cache: npm
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          static_site_generator: gatsby
+      - name: Restore cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            public
+            .cache
+          key: ${{ runner.os }}-gatsby-build-${{ hashFiles('public') }}
           restore-keys: |
-            ${{ runner.os }}-node-
-
-      - run: npm ci
-      - run: npm run format
-      - run: npm run test
-      - run: npm run build
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/master'
+            ${{ runner.os }}-gatsby-build-
+      - name: Install dependencies
+        run: npm ci
+      - name: Build with Gatsby
+        env:
+          PREFIX_PATHS: 'true'
+        run: npm run build
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          cname: blog.jahir.me
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          path: ./public
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+# name: Deploy to GitHub pages
+
+# on:
+#   push:
+#     branches:
+#       - master
+#   pull_request:
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-18.04
+#     steps:
+#       - uses: actions/checkout@v2
+
+#       - name: Setup Node
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: "14"
+
+#       - name: Cache dependencies
+#         uses: actions/cache@v2
+#         with:
+#           path: ~/.npm
+#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-node-
+
+#       - run: npm ci
+#       - run: npm run format
+#       - run: npm run test
+#       - run: npm run build
+
+#       - name: Deploy
+#         uses: peaceiris/actions-gh-pages@v3
+#         if: github.ref == 'refs/heads/master'
+#         with:
+#           cname: blog.jahir.me
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           publish_dir: ./public
